@@ -1,14 +1,24 @@
 # This file defines a number of helper functions to be used by map defining code
 
 # AddBrick(int x, int y, string pixmap)
-# This function adds a brick at x, y, with pixmap pixmap.
+# Adds a brick at x, y, with pixmap pixmap.
 def AddBrick(x, y,  pixmap):
-    "Wrapper to call the current map, and insert a brick into it"
+    "Add a brick to the current map"
     yanoid_map.AddObject("brick", x, y, 0, 0, pixmap)
 
+# AddStatic(int x, int y, int w, int h)
+# Adds a static (simple object, no pixmap) at x,y having size w,h
 def AddStatic(x, y, w, h):
-    "Wrapper to call the current map, and insert an object into it"
+    "Add a static (simple object, no pixmap) to the current map"
     yanoid_map.AddObject("static", x, y, w, h, "")
-    
 
+# SetPaddle(int x, int y, string pixmap)
+# Creates and sets the paddle for the current map
+# Will expose more attributes later
+def SetPaddle(x, y, pixmap):
+    "Creates and sets a paddle for the current map"
+    yanoid_map.SetPaddle(x, y, "FreeMotion", 0.0, 0.0, pixmap)
+
+    
+    
     
